--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -1,5 +1,10 @@
 # ChangeLog for app-office/1C_Enterprise-common
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2011 Gentoo Foundation; Distributed under the GPL v2
+
+*app-office/1C_Enterprise-common-8.2.14.528
+
+  22 Aug 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  Version bump.
 
 *app-office/1C_Enterprise-common-8.1.13
 
