--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-office/1C_Enterprise-server
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 
+*app-office/1C_Enterprise-common-8.2.14.528
+
+  22 Aug 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  Version bump.
+
 *app-office/1C_Enterprise-server-8.1.13
 
   13 May 2009; Kazankov Alexandr <johnrdoe63@cregion.ru>
