--- a/app-office/1C_Enterprise-crs/ChangeLog
+++ b/app-office/1C_Enterprise-crs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/1C_Enterprise-crs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  20 Sep 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  Added USE="nls"
+
 *app-office/1C_Enterprise-crs-8.1.13
 
   13 May 2009; Kazankov Alexandr <johnrdoe63@cregion.ru>
