--- a/app-office/1C_Enterprise-ws/ChangeLog
+++ b/app-office/1C_Enterprise-ws/ChangeLog
@@ -1,10 +1,16 @@
 # ChangeLog for app-office/1C_Enterprise-ws
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 
+*app-office/1C_Enterprise-ws-8.2.14.537
+
+  17 Oct 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-ws-8.2.14.537.ebuild
+  Version bump.
+
   20 Sep 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   Added USE="nls"
 
-*app-office/1C_Enterprise-common-8.2.14.528
+*app-office/1C_Enterprise-ws-8.2.14.528
 
   22 Aug 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   Version bump.
