--- a/net-misc/l7-filter-userspace/ChangeLog
+++ b/net-misc/l7-filter-userspace/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter-userspace/ChangeLog,v 1.12 2011/07/20 14:54:17 pacho Exp $
 
+  22 Dec 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +l7-filter-userspace-0.11-r1.ebuild,
+  +files/l7-filter-userspace-0.11-map-access-threadsafe.patch,
+  +files/l7-filter-userspace-0.11-pattern-loading-leak.patch
+  from bug #372629
+
   21 Dec 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   +files/l7-filter-userspace-0.11-datatype.patch, bug #372629
 
