--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/1C_Enterprise-server
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 
+*app-office/1C_Enterprise-server-8.2.14.540
+
+  22 Dec 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.2.14.540.ebuild
+  Version bump.
+
 *app-office/1C_Enterprise-server-8.2.14.537
 
   17 Oct 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
