--- a/app-office/1C_Enterprise-ws/ChangeLog
+++ b/app-office/1C_Enterprise-ws/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/1C_Enterprise-ws
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 
+*app-office/1C_Enterprise-ws-8.2.15.289
+
+  29 Doc 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-ws-8.2.15.289.ebuild
+  Version bump.
+
 *app-office/1C_Enterprise-ws-8.2.14.540
 
   22 Doc 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
