--- a/net-misc/l7-filter-userspace/ChangeLog
+++ b/net-misc/l7-filter-userspace/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for net-misc/l7-filter-userspace
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter-userspace/ChangeLog,v 1.12 2011/07/20 14:54:17 pacho Exp $
+# $Header: $
+
+*l7-filter-userspace-0.12_beta1 (12 Jan 2012)
+
+  12 Jan 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +l7-filter-userspace-0.12_beta1.ebuild,
+  +files/l7-filter-userspace-0.11-libnetfilter_conntrack-0.0.100.patch,
+  +files/l7-filter-userspace-0.11-datatype.patch:
+  bump version
+
+*l7-filter-userspace-0.11-r2 (12 Jan 2012)
+
+  12 Jan 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +l7-filter-userspace-0.11-r2.ebuild: fixed dependencies
 
   22 Dec 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   +l7-filter-userspace-0.11-r1.ebuild,
