--- a/net-misc/l7-filter-userspace/ChangeLog
+++ b/net-misc/l7-filter-userspace/ChangeLog
@@ -2,6 +2,16 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*l7-filter-userspace-0.11-r3 (12 Jan 2012)
+*l7-filter-userspace-0.12_beta1-r1 (12 Jan 2012)
+
+  12 Jan 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  -l7-filter-userspace-0.12_beta1.ebuild, -l7-filter-userspace-0.11.ebuild,
+  -l7-filter-userspace-0.11-r1.ebuild, -l7-filter-userspace-0.11-r2.ebuild,
+  +l7-filter-userspace-0.12_beta1-r1.ebuild,
+  +l7-filter-userspace-0.11-r3.ebuild:
+  Add checks for kernel configuration. Purge old ebuilds
+
 *l7-filter-userspace-0.12_beta1 (12 Jan 2012)
 
   12 Jan 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
