--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for app-office/1C_Enterprise-common
-# Copyright 2002-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 
-*app-office/1C_Enterprise-common-8.2.15.289
+*app-office/1C_Enterprise-common-8.2.15.294
+
+  21 Feb 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.2.15.294.ebuild:
+  Version bump.
+
+* app-office/1C_Enterprise-common-8.2.15.289
 
   29 Dec 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>,
   +1C_Enterprise-common-8.2.15.289.ebuild
