--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -1,5 +1,11 @@
 # ChangeLog for app-office/1C_Enterprise-server
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
+
+*app-office/1C_Enterprise-server-8.2.15.294
+
+  21 Feb 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.2.15.294.ebuild:
+  Version bump.
 
 *app-office/1C_Enterprise-server-8.2.15.289
 
