--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -1,5 +1,5 @@
-# ChangeLog for x11-plugins/obvious
-# Copyright 2011-2012 Gentoo Foundation; Distributed under the GPL v3
+# ChangeLog for dev-db/postgresql-server
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
 
 *postgresql-server-9.0.7 (29 Feb 2012)
