--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/1C_Enterprise-server
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 
+*app-office/1C_Enterprise-server-8.2.15.310
+
+  14 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.2.15.310.ebuild:
+  Version bump.
+
 *app-office/1C_Enterprise-server-8.2.15.301
 
   05 Apr 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
