--- a/net-analyzer/ocsng/ChangeLog
+++ b/net-analyzer/ocsng/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-analyzer/ocsng
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ocsng-2.0.5 (12 Jun 2012)
+
+  12 Jun 2012; Dmitry 'daks' Fomenko <daks@gentoo.org>
+  +ocsng-2.0.5.ebuild, -ocsng-1.01.ebuild, -ocsng-1.3.ebuild,
+  -ocsng-1.3.1.ebuild, -ocsng-2.0_rc3.ebuild, -ocsng-2.0_rc4.ebuild,
+  -ocsng-2.0.ebuild:
+  Bumped ocsng to release 2.0.5.
 
 *ocsng-2.0_rc4 (18 Apr 2011)
 
