--- a/sys-boot/grub/ChangeLog
+++ b/sys-boot/grub/ChangeLog
@@ -1,10 +1,11 @@
-# ChangeLog for grub
+# ChangeLog for sys-boot/grub
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
 *grub-1.99_rc1-r1.ebuild (27 Jul 2011)
 
-  27 Jul 2011; Dmitry 'daks' Fomenko <daks12@gmail.com> grub-1.99_rc1-r1.ebuild,
-  files/defaults, files/grub-1.99-genkernel.patch, files/grub-1.99-limits.patch,
-  files/grub-1.99-old_gcc.patch:
+  27 Jul 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>;
+  +grub-1.99_rc1-r1.ebuild, +files/defaults,
+  +files/grub-1.99-genkernel.patch, +files/grub-1.99-limits.patch,
+  +files/grub-1.99-old_gcc.patch, +metadata.xml, +ChangeLog:
   Ebuild with patches for work on hardened profile.
