--- a/app-shells/zsh-completion/ChangeLog
+++ b/app-shells/zsh-completion/ChangeLog
@@ -2,6 +2,8 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+* zsh-completion-99999999 (10 May 2012)
+
   10 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> +metadata.xml,
   +ChangeLog, +zsh-completion-99999999.ebuild:
   Added from "mva" (Vadim A. Misbakh-Soloviov <mva@mva.name>) overlay.
