--- a/dev-perl/DBD-XBase/ChangeLog
+++ b/dev-perl/DBD-XBase/ChangeLog
@@ -1,10 +1,9 @@
 # ChangeLog for dev-perl/DBD-XBase
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*DBD-XBase-1.03 (03 May 2011)
+*DBD-XBase-1.03 (18 Jun 2011)
 
-  03 May 2011; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  18 Jun 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
   +DBD-XBase-1.03.ebuild, +metadata.xml:
-  Initial import of DBD-XBase.
-
+  Initial import of DBD-XBase from overlay/jmbsvicetto.
