--- a/net-misc/italc/ChangeLog
+++ b/net-misc/italc/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  -italc-1.0.13.ebuild:
+  Purge old ebuild.
+
 *italk-2.0.0, italk-1.0.13-r1 (11 Feb 2012)
 
   11 Feb 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
