--- a/net-print/cndrvcups-capt/ChangeLog
+++ b/net-print/cndrvcups-capt/ChangeLog
@@ -1,4 +1,4 @@
-# ChangeLog for cndrvcups-capt
+# ChangeLog for net-print/cndrvcups-capt
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
