--- a/net-print/cndrvcups-common/ChangeLog
+++ b/net-print/cndrvcups-common/ChangeLog
@@ -1,9 +1,9 @@
-# ChangeLog for cndrvcups-common
+# ChangeLog for net-print/cndrvcups-common
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  29 Dec 2010; Dmitry 'daks' Fomenko <daks12@gmail.com> +metadata.xml,
-  +ChangeLog:
+  29 Dec 2010; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +metadata.xml, +ChangeLog:
   Corrected to comply with devmanual.
 
 *cndrvcups-common-2.00-r2 (26 Dec 2010)
