--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -6,14 +6,23 @@
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
 
-  04 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
-  sys-apps/portage-2.2*: Masked because of early experimental stage of patch for
-  autopatching.
+  14 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
+  games-strategy/x3-2.5.01.ebuild, nagios-core-3.2.1-r1.ebuild,
+  nagios-core-3.2.3, net-misc/pssh-2.2.2.ebuild:
+  Scheduled for removal in 30 days.
+
+  14 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
+  dev-db/postgresql-eter:
+  This ebild breaks system! Needs rewriting or remove.
+
+  12 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
+  Added scripts for regen stuff from mva overlay.
 
   11 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
   app-admin/conkyforecast-2.15, media-fonts/paratype-1.0, net-misc/pssh-2.2.2,
   sys-process/ioping-0.4:
   Old ebuilds. Scheduled for removal in 30 days.
 
-  12 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
-  Added scripts for regen stuff from mva overlay.
+  04 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> package.mask:
+  sys-apps/portage-2.2*: Masked because of early experimental stage of patch for
+  autopatching.
