--- a/app-office/1C_Enterprise-crs/ChangeLog
+++ b/app-office/1C_Enterprise-crs/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-crs-8.3.1.531
+
+  04 Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-crs-8.3.1.531.ebuild,
+  Version bump.
+
 *app-office/1C_Enterprise-crs-8.2.15.317
 
   18 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
