--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-client-8.3.1.531-r1
+
+  14 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +1C_Enterprise-client-8.3.1.531-r1.ebuild,
+  -1C_Enterprise-client-8.3.1.531.ebuild:
+  net-print/cups has been added as a dependency. Purge old ebuild.
+
 *app-office/1C_Enterprise-client-8.3.1.531
 
   14 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
