--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -2,6 +2,14 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-server-8.3.1.531-r2
+
+  08 Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.3.1.531-r2.ebuild,
+  -1C_Enterprise-server-8.3.1.531-r1.ebuild,
+  -1C_Enterprise-server-8.3.1.531.ebuild:
+  Correcting patch in the ebuild. Purge old ebuilds.
+
 *app-office/1C_Enterprise-server-8.3.1.531-r1
 
   05Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
