--- a/app-office/1C_Enterprise-ws/ChangeLog
+++ b/app-office/1C_Enterprise-ws/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  -1C_Enterprise-ws-8.3.1.531.ebuild:
+  Purge old ebuilds.
+
 *app-office/1C_Enterprise-ws-8.3.1.531-r1
 
   05 Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
