--- a/app-shells/zsh-completion/ChangeLog
+++ b/app-shells/zsh-completion/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+* zsh-completion-99999999-r1 (10 Nov 2012)
+
+  10 Nov 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +zsh-completion-99999999-r1.ebuild, -zsh-completion-99999999.ebuild:
+  Fixed install phase.
+
 * zsh-completion-99999999 (10 May 2012)
 
   10 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> +metadata.xml,
