--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -2,6 +2,14 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-common-8.2.17.143
+*app-office/1C_Enterprise-common-8.2.17.153
+
+  25 Dec 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.2.17.143.ebuild,
+  +1C_Enterprise-common-8.2.17.153.ebuild:
+  Version bump.
+
 *app-office/1C_Enterprise-common-8.3.1.531-r2
 
   08 Jul 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>,
