--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-client-8.3.2.172
+
+  25 Dec 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +1C_Enterprise-client-8.3.2.172.ebuild:
+  Bump version.
+
 *app-office/1C_Enterprise-client-8.3.1.531-r1
 
   14 May 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
