--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
 
+*postgresql-server-8.4.11 (14 May 2012)
+
+  25 Dec  2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  -postgresql-server-8.4.11.ebuild,
+  +postgresql-server-8.4.11-r1.ebuild:
+  Add missing 1c_misc-pg8.4.patch file.
+
   14 Jun  2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
   postgresql-server-9.0.7.ebuild:
   Fix some repoman complaints.
