--- a/dev-db/postgresql-base/ChangeLog
+++ b/dev-db/postgresql-base/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
 
+*postgresql-base-9.1.2 (26 Dec 2012)
+
+  26 Dec 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +postgresql-base-9.1.2.ebuild:
+  Bump version.
+
 *postgresql-base-8.4.11-r1 (14 May 2012)
 
   12 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
