--- a/dev-db/postgresql-docs/ChangeLog
+++ b/dev-db/postgresql-docs/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*postgresql-docs-9.1.2 (26 Dec 2012)
+
+  26 Dec 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +postgresql-docs-9.1.2.ebuild:
+  Added from official tree.
+
 *postgresql-docs-9.0.7 (14 May 2012)
 *postgresql-docs-8.4.11 (14 May 2012)
 *postgresql-docs-8.3.18 (14 May 2012)
