--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-office/1C_Enterprise-server
-# Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*app-office/1C_Enterprise-server-8.2.19.80
+
+  20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.2.19.80.ebuild,
+  -1C_Enterprise-server-8.2.17.143.ebuild:
+  Purge old ebuild, version bump.
 
 *app-office/1C_Enterprise-server-8.2.16.368
 *app-office/1C_Enterprise-server-8.2.17.143
