--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/1C_Enterprise-client
-# Copyright 2002-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*app-office/1C_Enterprise-client-8.3.3.721
+
+  20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +1C_Enterprise-client-8.3.3.721.ebuild:
+  Bump version.
 
 *app-office/1C_Enterprise-client-8.3.2.172
 
