--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -2,9 +2,11 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*app-office/1C_Enterprise-common-8.3.3.721
 *app-office/1C_Enterprise-common-8.2.19.80
 
   20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.3.3.721.ebuild,
   +1C_Enterprise-common-8.2.19.80.ebuild,
   -1C_Enterprise-common-8.2.17.143.ebuild:
   Purge old ebuild, version bump.
