--- a/games-rpg/pylotro/ChangeLog
+++ b/games-rpg/pylotro/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-rpg/pylotro
-# Copyright 2013 Gentoo Foundation; Distributed under the GPL v3
+# Copyright 2012-2013 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
+
+*games-rpg/pylotro-0.1.15-r2 (20 Dec 2013)
+
+  20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +pylotro-0.1.15-r2.ebuild, -pylotro-0.1.15-r1.ebuild:
+  Cleanup ebuilds.
 
 *games-rpg/pylotro-0.2.0 (18 Dec 2013)
 
