--- a/dev-db/postgresql-base/ChangeLog
+++ b/dev-db/postgresql-base/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql-base
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v3
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
+
+*postgresql-base-9.2.4-r2 (21 Dec 2013)
+
+  21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +postgresql-base-9.2.4-r2.ebuild:
+  Bump version.
 
 *postgresql-base-9.1.2 (26 Dec 2012)
 
