--- a/x11-terms/lilyterm/ChangeLog
+++ b/x11-terms/lilyterm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/lilyterm
-# Copyright 2012 Gentoo Foundation; Distributed under the GPL v3
+# Copyright 2012-2013 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
+
+*lilyterm-0.9.9.4 (21 Dec 2012)
+
+  21 Dec 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +lilyterm-0.9.9.4.ebuild, -lilyterm-0.9.9.1-r1.ebuild:
+  Version bump, purge old ebuild.
 
 *lilyterm-0.9.9.2 (21 Jun 2012)
 
