--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -3,10 +3,11 @@
 # $Header: $
 
 *postgresql-server-9.2.4-r2 (21 Dec 2013)
+*postgresql-server-9.1.9-r2 (21 Dec 2013)
 
   21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
-  +postgresql-server-9.2.4-r2.ebuild:
-  Bump version.
+  +postgresql-server-9.2.4-r2.ebuild, +postgresql-server-9.1.9-r2.ebuild:
+  Bump versions.
 
 *postgresql-server-9.1.2 (26 Dec 2012)
 
