--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -2,7 +2,13 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*app-office/1C_Enterprise-client-8.3.3.721
+*1C_Enterprise-client-8.3.4.365 (21 Dec 2013)
+
+  21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +1C_Enterprise-client-8.3.4.365.ebuild:
+  Bump version.
+
+*1C_Enterprise-client-8.3.3.721 (20 Dec 2013)
 
   20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
   +1C_Enterprise-client-8.3.3.721.ebuild:
