--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -2,8 +2,14 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*app-office/1C_Enterprise-server-8.3.3.721
-*app-office/1C_Enterprise-server-8.2.19.80
+*1C_Enterprise-server-8.3.4.365 (21 Dec 2013)
+
+  21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.3.4.365.ebuild:
+  Version bump.
+
+*1C_Enterprise-server-8.3.3.721 (20 Dec 2013)
+*1C_Enterprise-server-8.2.19.80 (20 Dec 2103)
 
   20 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
   +1C_Enterprise-server-8.3.3.721.ebuild,
