--- a/app-office/1C_Enterprise-server/ChangeLog
+++ b/app-office/1C_Enterprise-server/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*1C_Enterprise-server-8.3.4.365-r1 (26 Dec 2013)
+
+  26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-server-8.3.4.365-r1.ebuild,
+  +init.d.patch, -1C_Enterprise-server-8.3.4.365:
+  Added forgotten patch.
+
 *1C_Enterprise-server-8.3.4.365 (21 Dec 2013)
 
   21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
