--- a/app-office/1C_Enterprise-ws/ChangeLog
+++ b/app-office/1C_Enterprise-ws/ChangeLog
@@ -2,10 +2,17 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*1C_Enterprise-ws-8.2.19.80-r1 (26 Dec 2013)
+
+  26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-ws-8.2.19.80-r1.ebuild,
+  -1C_Enterprise-ws-8.2.19.80.ebuild:
+  Fix ${S} path.
+
 *1C_Enterprise-ws-8.3.4.365 (21 Dec 2013)
 
   21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
-  +1C_Enterprise-ws-8.3.3.721.ebuild:
+  +1C_Enterprise-ws-8.3.4.365.ebuild:
   Version bump.
 
 *1C_Enterprise-ws-8.3.3.721 (20 Dec 2013)
