--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  -1C_Enterprise-client-8.3.1.531-r1.ebuild,
+  -1C_Enterprise-client-8.3.2.172.ebuild:
+  Purge old ebuilds.
+
+
 *1C_Enterprise-client-8.3.4.365 (21 Dec 2013)
 
   21 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>
