--- a/app-office/1C_Enterprise-ws/ChangeLog
+++ b/app-office/1C_Enterprise-ws/ChangeLog
@@ -2,6 +2,17 @@
 # Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  -1C_Enterprise-ws-8.2.13.219.ebuild,
+  -1C_Enterprise-ws-8.2.14.540-r1.ebuild,
+  -1C_Enterprise-ws-8.2.15.317.ebuild,
+  -1C_Enterprise-ws-8.2.16.368.ebuild,
+  -1C_Enterprise-ws-8.2.17.153.ebuild,
+  -1C_Enterprise-ws-8.3.1.531-r1.ebuild,
+  -1C_Enterprise-ws-8.3.2.172.ebuild:
+  Purge old ebuilds.
+
+
 *1C_Enterprise-ws-8.2.19.80-r1 (26 Dec 2013)
 
   26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
