--- a/app-shells/zsh-completion/ChangeLog
+++ b/app-shells/zsh-completion/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/zsh-completion
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+* zsh-completion-99999999-r2 (03 Jun 2014)
+
+  03 Jun 2014; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +zsh-completion-99999999-r2.ebuild, -zsh-completion-99999999-r1.ebuild:
+  Added USE flags.
 
 * zsh-completion-99999999-r1 (10 Nov 2012)
 
