--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-office/1C_Enterprise-client
-# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*1C_Enterprise-common-8.3.3.721-r1 (02 Jul 2014)
+*1C_Enterprise-common-8.3.4.496 (02 Jul 2104)
+
+  02 Jul 2014; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.3.3.721-r1.ebuild,
+  +1C_Enterprise-common-8.3.4.496.ebuild,
+  -1C_Enterprise-common-8.3.3.721.ebuild,
+  Update ebuilds version, purge old ebuilds, fix #14.
 
   26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
   -1C_Enterprise-client-8.3.1.531-r1.ebuild,
