--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for app-office/1C_Enterprise-common
-# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*1C_Enterprise-common-8.2.19.106 (01 Jul 2104)
+*1C_Enterprise-common-8.3.3.721-r1 (01 Jul 2014)
+*1C_Enterprise-common-8.3.4.496 (01 Jul 2104)
+
+  01 Jul 2014; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.2.19.106.ebuild,
+  +1C_Enterprise-common-8.3.3.721-r1.ebuild,
+  +1C_Enterprise-common-8.3.4.496.ebuild,
+  -1C_Enterprise-common-8.2.19.80-r1.ebuild,
+  -1C_Enterprise-common-8.3.3.721.ebuild,
+  -1C_Enterprise-common-8.3.4.365.ebuild:
+  Update ebuilds version, purge old ebuilds.
 
   26 Dec 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>,
   -1C_Enterprise-common-8.2.13.219.ebuild,
