--- a/app-office/1C_Enterprise-client/ChangeLog
+++ b/app-office/1C_Enterprise-client/ChangeLog
@@ -2,6 +2,20 @@
 # Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*1C_Enterprise-client-8.3.3.721-r2.ebuild (11 Jul 2104)
+*1C_Enterprise-client-8.3.4.496-r1.ebuild (11 Jul 2104)
+*1C_Enterprise-server-8.3.5.1068 (11 Jul 2104)
+
+  11 Jul 2014; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  -1C_Enterprise-client-8.3.3.721-r1.ebuild,
+  -1C_Enterprise-client-8.3.4.365.ebuild,
+  -1C_Enterprise-client-8.3.4.496.ebuild,
+  +1C_Enterprise-client-8.3.3.721-r2.ebuild,
+  +1C_Enterprise-client-8.3.4.496-r1.ebuild,
+  +1C_Enterprise-server-8.3.5.1068.ebuild:
+  Fix bug #11 (http://www.forum.mista.ru/topic.php?id=699686),
+  purge old version, bump version.
+
 *1C_Enterprise-common-8.3.3.721-r1 (02 Jul 2014)
 *1C_Enterprise-common-8.3.4.496 (02 Jul 2104)
 
