--- a/app-office/1C_Enterprise-crs/ChangeLog
+++ b/app-office/1C_Enterprise-crs/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*1C_Enterprise-crs-8.3.5.1068 (11 Jul 2104)
+
+  11 Jul 2014; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-crs-8.3.5.1068.ebuild:
+  Bump version.
+
 *1C_Enterprise-common-8.2.19.106 (01 Jul 2104)
 *1C_Enterprise-common-8.3.3.721-r1 (01 Jul 2014)
 *1C_Enterprise-common-8.3.4.496 (01 Jul 2104)
