--- a/app-office/1C_Enterprise-common/ChangeLog
+++ b/app-office/1C_Enterprise-common/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-office/1C_Enterprise-common
-# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*1C_Enterprise-common-8.3.6.1804 (03 Mar 2105)
+*1C_Enterprise-common-8.3.5.1460 (03 Mar 2105)
+*1C_Enterprise-common-8.2.19.130 (03 Mar 2105)
+
+  03 Mar 2015; Dmitry 'daks' Fomenko <daks12@gmail.com>,
+  +1C_Enterprise-common-8.3.6.1804.ebuild,
+  +1C_Enterprise-common-8.3.5.1460.ebuild,
+  +1C_Enterprise-common-8.2.19.130.ebuild:
+  Version bump.
 
 *1C_Enterprise-common-8.3.5.1068 (11 Jul 2104)
 
