--- a/app-laptop/gnome-battery-bench/ChangeLog
+++ b/app-laptop/gnome-battery-bench/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+* gnome-battery-bench-3.15.4-r1
+
+  23 Apr 2015; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +gnome-battery-bench-3.15.4-r1.ebuild,
+  -gnome-battery-bench-3.15.4.ebuild:
+  Added detection the required kernel module.
+
 * gnome-battery-bench-3.15.4
 
   22 Apr 2015; Dmitry 'daks' Fomenko <daks12@gmail.com>
